--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Document</title>
 </head>
 <body>
+    <div>
+        <button id="getJokeBtn">Get a Joke</button>
+        <p id="joke"></p>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
