--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css"> 
-    <title>Document</title>
+    <title>Quick Hehe</title>
 </head>
 <body>
+    <img src="resources/paupoint.png" id="paupoint">
     <div>
         <button id="getJokeBtn">Get a Joke</button>
         <p id="joke"></p>
