Added style for button and text visibility

--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css"> 
-    <title>Quick Hehe</title>
+    <link rel="icon" href="resources/logo.png"/>
+    <title>PandaJoke</title>
 </head>
 <body>
-    <img src="resources/paupoint.png" id="paupoint">
-    <div>
+    <section>
         <button id="getJokeBtn">Get a Joke</button>
+        <img src="resources/paupoint.png" id="paupoint">
         <p id="joke"></p>
-    </div>
+    </section>
     <script src="script.js"></script>
 </body>
 </html>
